# enum_common_fields

./: Cargo.toml  README.md
src/: lib.rs
tests/: sanity_tests.rs
