[package]
name = "enum_common_fields"
version = "0.3.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/eliduvid/enum_common_fields"
repository = "https://github.com/eliduvid/enum_common_fields.git"
description = "Macro for easy access to common fields of enums"
categories = ["rust-patterns", "development-tools"]
keywords = ["enum", "macros", "code-generation", "field-manipulation", "accessors"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.15"
